@@ -3,7 +3,9 @@ package net.combatroll.client;
 import net.combatroll.CombatRoll;
 import net.minecraft.client.option.KeyBinding;
 import net.minecraft.client.util.InputUtil;
+import org.lwjgl.glfw.GLFW;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class RollKeybings {
@@ -14,9 +16,9 @@ public class RollKeybings {
         roll = new KeyBinding(
                 "keybinds.combatroll.roll",
                 InputUtil.Type.KEYSYM,
-                InputUtil.GLFW_KEY_R,
+                GLFW.GLFW_KEY_R,
                 CombatRoll.modName());
 
-        all = List.of(roll);
+        all = Arrays.asList(roll);
     }
 }
